include/CdbfapiPlusX.h

typedef     int cdbfapiPlus;
__declspec(dllexport) char* filetypeAsText(cdbfapiPlus* handle);
__declspec(dllexport) int   headerSize(cdbfapiPlus* handle);
__declspec(dllexport) void  resetLastRecord(cdbfapiPlus* handle);
__declspec(dllexport) char* typeAsText(char c);
__declspec(dllexport) void  setByte(cdbfapiPlus* handle, int offset, char b);
__declspec(dllexport) char  getByte(cdbfapiPlus* handle, int offset);