cdbfapiSharp/CDBFapi.cs


        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern int headerSize(IntPtr handle);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void resetLastRecord(IntPtr handle);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void setByte(IntPtr handle, int offset, byte b);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern byte getByte(IntPtr handle, int offset);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern IntPtr filetypeAsText(IntPtr handle);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern IntPtr typeAsText(char c);


    }
}
